--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -3,6 +3,8 @@ div.newsCardCard{
     height: 110px; 
     box-shadow: 0px 0px 8px 1px rgba(0,0,0,.05);
     border-radius: 8px;
+
+    cursor:pointer;
 }
 
 .newsCardCard > .newsCardMedia{
