--- a/src/components/PanelSidebar/PanelSidebar.css
+++ b/src/components/PanelSidebar/PanelSidebar.css
@@ -22,6 +22,7 @@
   margin-right: 33px;
   padding: 30px 30px 30px 0;
   letter-spacing: 0.3px;
+  cursor: pointer;
 }
 
 .sidebarContainer > .sidebarContainerLogo > p{
