--- a/src/components/SingleCourse/CourseDetailClass/CourseDetailClass.css
+++ b/src/components/SingleCourse/CourseDetailClass/CourseDetailClass.css
@@ -1,5 +1,5 @@
 .aboutCourse {
-  margin-top: 8rem;
+  margin-top: 60px;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -16,50 +16,50 @@
     flex-wrap: nowrap;
   }
 }
-.aboutCourse .informCourse {
+.aboutCourse > .informCourse {
   width: 40%;
   height: 100%;
 }
 @media (max-width: 1262px) {
-  .aboutCourse .informCourse {
+  .aboutCourse > .informCourse {
     width: 70%;
     margin: auto;
   }
 }
 @media (max-width: 749px) {
-  .aboutCourse .informCourse {
+  .aboutCourse > .informCourse {
     width: 100%;
     margin: auto;
   }
 }
-.aboutCourse .informCourse p {
+.aboutCourse > .informCourse > p {
   font-size: 35px;
   font-family: bakh;
   color: #043D72;
 }
 @media (max-width: 60rem) {
-  .aboutCourse .informCourse p {
+  .aboutCourse > .informCourse > p {
     width: 450px;
     margin-bottom: 2rem;
     margin-top: 2rem;
   }
 }
 @media (max-width: 749px) {
-  .aboutCourse .informCourse p {
+  .aboutCourse > .informCourse > p {
     font-size: 23px;
   }
 }
-.aboutCourse .informCourse hr {
+.aboutCourse > .informCourse > hr {
   width: 60px;
-  border-width: 5px;
-  border: 2.5px solid #FDEA00;
+  border-width: 4px;
+  border: 2px solid #FDEA00;
   background-color: #FDEA00;
   margin-right: -2px;
   margin-top: -30px;
   margin-bottom: 2rem;
 }
 @media (max-width: 749px) {
-  .aboutCourse .informCourse hr {
+  .aboutCourse > .informCourse > hr {
     margin-top: -25px;
     margin-right: 0rem;
   }
@@ -101,6 +101,8 @@
 }
 .aboutCourse .informCourse .information div span {
   padding-right: 5px;
+  margin-right: 5px;
+  color: #616D76;
 }
 @media (max-width: 749px) {
   .aboutCourse .informCourse .information div span {
@@ -168,7 +170,9 @@
 }
 .aboutCourse .photoCourse .offCourse .offCount {
   font-size: 25px;
+  margin-bottom: -5px;
 }
 .aboutCourse .photoCourse .offCourse .offTitle {
   font-size: 10px;
+  margin-top: 0px;
 }/*# sourceMappingURL=index.css.map */
