--- a/src/components/SingleCourse/DeatilsCourse/DetailCourse.css
+++ b/src/components/SingleCourse/DeatilsCourse/DetailCourse.css
@@ -5,6 +5,7 @@
   align-items: flex-start;
   flex-wrap: nowrap;
   margin: auto;
+  margin-top: 50px;
 }
 @media screen and (max-width: 1262px) {
   .descriptionCourse {
@@ -27,9 +28,9 @@
   font-size: 25px;
   font-family: bakh;
   color: #043D72;
-  border-right: 5px solid #FDEA00;
+  border-right: 4px solid #FDEA00;
   width: 166px;
-  height: 30px;
+  height: 27px;
   text-align: center;
   margin-bottom: 2.5rem;
 }
@@ -45,8 +46,10 @@
   text-justify: inter-word;
 }
 .descriptionCourse div header {
-  color: #797b7c;
+  color: #808080;
   margin-bottom: 0.5rem;
+  margin-top: .75rem;
+  font-size: 18px;
 }
 @media (max-width: 749px) {
   .descriptionCourse div header {
@@ -54,7 +57,8 @@
   }
 }
 .descriptionCourse div span {
-  color: #acacac;
+  color: #9B9B9B;
+  font-size: 15px
 }
 @media (max-width: 749px) {
   .descriptionCourse div span {
