--- a/src/screens/shoppingCart/index.css
+++ b/src/screens/shoppingCart/index.css
@@ -4,14 +4,6 @@
     margin: auto;
 }
 
-.shoppingCart .emptyShopping{
-    align-items: center;
-    background-color: aliceblue;
-    text-align: center;
-    border-radius: 10px;
-    box-shadow: 0px 3px 8px 1px rgba(183, 170, 240, 0);
-    padding: 5px;
-}
 
 .shoppingCart .shoppingCardTitle {
     height: 80px;
@@ -108,6 +100,30 @@
 }
 
 
+.shoppingCart .emptyShopping{
+    width:955px; 
+    height:395px;
+    background: url('./../../assets/images/shoppingCart/shoppingEmpty.png');
+    background-size:100%;
+    margin: auto;
+    /* margin-top: -10px; */
+}
+
+.shoppingCart p.emptyShoppingTitle{
+    text-align: center;
+    font-family: saye;
+    font-size: 50px;
+    margin-top: 10px;
+}
+
+.shoppingCart p.insertInShoppingCart{
+    transition: .5s;
+    text-align: center;
+    font-size: 20px;
+    color: #00ADEF;
+    cursor: pointer;
+}
+
 
 @media screen and (max-width:1262px) {
 
@@ -147,7 +163,20 @@
         height: 28px;
     }
 
-
+    .shoppingCart .emptyShopping{
+        width:600px; 
+        height:248px;
+    }
+    
+    .shoppingCart p.emptyShoppingTitle{
+        font-size: 30px;
+        margin-top: 5px;
+    }
+    
+    .shoppingCart p.insertInShoppingCart{
+        font-size: 18px;
+        margin-top: -15px;
+    }
 
 }
 
@@ -182,5 +211,20 @@
 
     .shoppingCart .detailShoppingCart .totalShopping .describeShopping .totalPay {
         padding-bottom: 14px;
+    }
+
+    .shoppingCart .emptyShopping{
+        width:100%; 
+        height: 165px;;
+    }
+    
+    .shoppingCart p.emptyShoppingTitle{
+        font-size: 20px;
+        margin-top: 5px;
+    }
+    
+    .shoppingCart p.insertInShoppingCart{
+        font-size: 12px;
+        margin-top: -15px;
     }
 }
