--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -3,16 +3,31 @@
   padding-top: 10px;
 }
 
-.header1 > .headerRow {
+.header1En {
+  direction: ltr;
+  width: 100%;
+  padding-top: 10px;
+}
+
+.header1>.headerRow {
   height: 82px;
   float: right;
 }
 
-.header1 > .headerHamberMenu {
+.header1En>.headerRow {
+  height: 82px;
+  float: left;
+}
+
+.header1>.headerHamberMenu {
   display: none;
 }
 
-.header1 > .headerLogo {
+.header1En>.headerHamberMenu {
+  display: none;
+}
+
+.header1>.headerLogo {
   width: 45px;
   background: url(./../../assets/images/header/logo.png);
   font-size: 24px;
@@ -24,16 +39,37 @@
   text-align: center;
 }
 
-.header1 > .headerNavbar {
+.header1En>.headerLogo {
+  width: 45px;
+  background: url(./../../assets/images/header/logo.png);
+  font-size: 24px;
+  height: 82px;
+  margin-left: 100px;
+  background-position: 50% 12px;
+  background-repeat: no-repeat;
+  background-size: 45px;
+  text-align: center;
+}
+
+.header1>.headerNavbar {
   margin-right: 50px;
   text-align: right;
 }
 
-.header1 > .headerNavbar > p:hover {
+.header1En>.headerNavbar {
+  margin-right: 50px;
+  text-align: left;
+}
+
+.header1>.headerNavbar>p:hover {
   color: #494949;
 }
 
-.header1 > .headerNavbar > p {
+.header1En>.headerNavbar>p:hover {
+  color: #494949;
+}
+
+.header1>.headerNavbar>p {
   transition: .3s;
   cursor: pointer;
   display: inline-block;
@@ -42,13 +78,28 @@
   margin-left: 28px;
 }
 
-.header1 > .headerNavbar > p:nth-child(1) {
-  cursor:default;
-  color: #043d72;
-  text-decoration : underline;
+.header1En>.headerNavbar>p {
+  transition: .3s;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 17px;
+  color: #808080;
+  margin-left: 28px;
 }
 
-.header1 > .headerLogin {
+.header1>.headerNavbar>p:nth-child(1) {
+  cursor: default;
+  color: #043d72;
+  text-decoration: underline;
+}
+
+.header1En>.headerNavbar>p:nth-child(1) {
+  cursor: default;
+  color: #043d72;
+  text-decoration: underline;
+}
+
+.header1>.headerLogin {
   margin-right: 535px;
   margin-top: 10px;
   border-radius: 33px;
@@ -56,7 +107,15 @@
   justify-content: space-around;
 }
 
-.header1 > .headerLogin > .loginUser {
+.header1En>.headerLogin {
+  margin-left: 520px;
+  margin-top: 10px;
+  border-radius: 33px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.header1>.headerLogin>.loginUser {
   transition: 0.5s;
   background: url(./../../assets/images/header/user.png) center;
   background-repeat: no-repeat;
@@ -73,7 +132,40 @@
   background-color: #00adef;
 }
 
-.header1 > .headerLogin > .loginSearch {
+.header1En>.headerLogin>.loginUser {
+  transition: 0.5s;
+  background: url(./../../assets/images/header/user.png) center;
+  background-repeat: no-repeat;
+  background-size: 23px;
+  height: 30px;
+  width: 30px;
+  display: inline-block;
+  margin-top: 2px;
+  margin-left: 10px;
+  padding: 5px;
+  border-radius: 50%;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: #00adef;
+}
+
+.header1>.headerLogin>.loginSearch {
+  transition: 0.5s;
+  background: url(./../../assets/images/header/shopping.png) center;
+  background-repeat: no-repeat;
+  background-size: 23px;
+  height: 30px;
+  width: 30px;
+  display: inline-block;
+  margin-top: 2px;
+  margin-left: 10px;
+  padding: 5px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #00adef;
+}
+
+.header1En>.headerLogin>.loginSearch {
   transition: 0.5s;
   background: url(./../../assets/images/header/shopping.png) center;
   background-repeat: no-repeat;
@@ -90,31 +182,63 @@
 }
 
 @media screen and (max-width: 1263px) {
-  .header1 > .headerLogo {
+  .header1>.headerLogo {
     margin-right: 40px;
   }
 
-  .header1 > .headerNavbar {
+  .header1En>.headerLogo {
+    margin-left: 40px;
+    background-size: 34px;
+  }
+
+  .header1>.headerNavbar {
     margin-right: 40px;
     padding-top: 2px;
   }
 
-  .header1 > .headerNavbar > p {
+  .header1En>.headerNavbar {
+    margin-left: 1px;
+    padding-top: 2px;
+  }
+
+  .header1>.headerNavbar>p {
     font-size: 15px;
     margin-left: 15px;
   }
 
-  .header1 > .headerLogin {
+  .header1En>.headerNavbar>p {
+    font-size: 13px;
+    margin-right: 1px;
+  }
+
+  .header1>.headerLogin {
     margin-right: 235px;
   }
 
-  .header1 > .headerLogin > .loginUser {
+  .header1En>.headerLogin {
+    margin-left: 653px;
+    margin-top: -73px;
+  }
+
+  .header1>.headerLogin>.loginUser {
     background-size: 18px;
     height: 20px;
     width: 20px;
   }
 
-  .header1 > .headerLogin > .loginSearch {
+  .header1En>.headerLogin>.loginUser {
+    background-size: 18px;
+    height: 20px;
+    width: 20px;
+  }
+
+  .header1>.headerLogin>.loginSearch {
+    background-size: 18px;
+    height: 20px;
+    width: 20px;
+  }
+
+  .header1En>.headerLogin>.loginSearch {
     background-size: 18px;
     height: 20px;
     width: 20px;
@@ -127,12 +251,22 @@
     position: relative;
   }
 
-  .header1 > .headerLogo {
+  .header1En {
+    padding-top: 5px;
+    position: relative;
+  }
+
+  .header1>.headerLogo {
     margin-right: 30px;
     background-size: 35px;
   }
 
-  .header1 > .headerNavbar {
+  .header1En>.headerLogo {
+    margin-left: 30px;
+    background-size: 35px;
+  }
+
+  .header1>.headerNavbar {
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.05);
     transition: 1s;
     border-radius: 5px;
@@ -142,18 +276,36 @@
     top: 45px;
     right: 85px;
     padding: 0;
-    margin:0;
+    margin: 0;
     overflow: hidden;
     opacity: 0;
-    background-color:white;
+    background-color: white;
     z-index: 200;
   }
 
-  .header1 > .headerNavbar > p:hover{
+  .header1En>.headerNavbar {
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.05);
+    transition: 1s;
+    border-radius: 5px;
+    height: 0px;
+    width: 195px;
+    position: absolute;
+    top: 45px;
+    left: 125px;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    opacity: 0;
+    background-color: white;
+    z-index: 200;
+  }
+
+  .header1>.headerNavbar>p:hover,
+  .header1En>.headerNavbar>p:hover {
     background-color: #EFFBFF;
   }
 
-   .header1 > .headerNavbar > p {
+  .header1>.headerNavbar>p {
     display: block;
     padding: 10px 10px 10px 0;
     height: 10px;
@@ -163,11 +315,40 @@
     line-height: 10px;
   }
 
-  .header1 > .headerLogin {
+
+  .header1En>.headerNavbar>p {
+    text-align: end;
+    display: block;
+    padding: 10px 10px 10px 0;
+    height: 10px;
+    margin: 1px 0 0 0;
+    border-radius: 5px;
+    font-size: 13px;
+    line-height: 10px;
+  }
+
+  .header1>.headerLogin {
     margin-right: 217px;
   }
 
-  .header1 > .headerHamberMenu {
+  .header1En>.headerLogin {
+    margin-left: 315px;
+  }
+
+  .header1>.headerHamberMenu {
+    width: 25px;
+    height: 25px;
+    display: block;
+    background: url("./../../assets/images/header/paragraph.png");
+    background-size: 22px;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 23px;
+    right: 80px;
+    cursor: pointer;
+  }
+
+  .header1En>.headerHamberMenu {
     width: 25px;
     height: 25px;
     display: block;
