--- a/src/components/HomeIntro/HomeIntro.css
+++ b/src/components/HomeIntro/HomeIntro.css
@@ -7,14 +7,31 @@ div.introContainer {
     background-repeat: no-repeat;
 }
 
-div.introContainer>h1 {
+div.introContainerEn {
+    direction: ltr;
+    width: 100%;
+    height: 762px;
+    margin-top: -50px;
+    background: url("./../../assets/images/Intro/introBGEn.png");
+    background-size: 640px 762px;
+    background-position: 641px 5px;
+    background-repeat: no-repeat;
+}
 
+div.introContainerEn>h1 {
+    padding-top: 250px;
+    padding-left: 100px;
+    font-size: 50px;
+    font-weight: normal;
+    color: #043D72;
+}
+
+div.introContainer>h1 {
     padding-top: 250px;
     padding-right: 100px;
     font-size: 50px;
     font-weight: normal;
     color: #043D72;
-
 }
 
 div.introContainer>hr {
@@ -26,6 +43,15 @@ div.introContainer>hr {
     margin-top: -20px;
 }
 
+div.introContainerEn>hr {
+    width: 60px;
+    border-width: 5px;
+    border: 2.5px solid #FDEA00;
+    background-color: #FDEA00;
+    margin-left: 100px;
+    margin-top: -20px;
+}
+
 div.introContainer>p {
     margin-right: 100px;
     margin-top: 20px;
@@ -34,11 +60,27 @@ div.introContainer>p {
     width: 456px;
 }
 
-.btn-home {
+div.introContainerEn>p {
+    margin-left: 100px;
+    margin-top: 20px;
+    color: #616D76;
+    font-size: 20px;
+    width: 456px;
+}
+
+.introContainer .btn-home {
     width: 500px;
     display: flex;
     justify-content: space-around;
     margin-right: 250px;
+    margin-top: 95px;
+}
+
+.introContainerEn .btn-home {
+    width: 500px;
+    display: flex;
+    justify-content: space-around;
+    margin-left: 250px;
     margin-top: 95px;
 }
 
@@ -50,7 +92,7 @@ div.introContainer>.btn-home>button.infoBut {
 
 @media screen and (max-width:1262px) {
 
-    .btn-home {
+    div.introContainer>.btn-home {
         width: 425px;
         display: flex;
         justify-content: space-around;
@@ -58,10 +100,28 @@ div.introContainer>.btn-home>button.infoBut {
         margin-top: 20px;
     }
 
+    div.introContainerEn>.btn-home {
+        width: 425px;
+        display: flex;
+        justify-content: space-around;
+        margin-left: 170px;
+        margin-top: 20px;
+    }
+
     div.introContainer>h1 {
 
         padding-top: 215px;
         padding-right: 100px;
+        font-size: 50px;
+        font-weight: normal;
+        color: #043D72;
+        margin-bottom: 20px;
+    }
+
+    div.introContainerEn>h1 {
+
+        padding-top: 215px;
+        padding-left: 100px;
         font-size: 50px;
         font-weight: normal;
         color: #043D72;
@@ -77,7 +137,7 @@ div.introContainer>.btn-home>button.infoBut {
 
 @media screen and (max-width:749px) {
 
-    .btn-home {
+    div.introContainer>.btn-home {
         width: 325px;
         display: flex;
         justify-content: space-around;
@@ -85,18 +145,38 @@ div.introContainer>.btn-home>button.infoBut {
         margin-top: 30px;
     }
 
-    div.introContainer>h1 {
+    div.introContainerEn>.btn-home {
+        width: 325px;
+        display: flex;
+        justify-content: space-around;
+        margin-left: 35px;
+        margin-top: 30px;
+    }
+
+    div.introContainerEn>.btn-home .MuiButtonBase-root{
+        font-size: 10px;
+    }
+
+    div.introContainer>h1,
+    div.introContainerEn>h1 {
 
         padding-top: 250px;
     }
 
 
 }
+
 @media screen and (max-width:1262px) {
 
     /* Intro */
 
     div.introContainer {
+        background-size: 380px 452px;
+        background-position: 0 12px;
+        height: 460px;
+    }
+
+    div.introContainerEn {
         background-size: 380px 452px;
         background-position: 0 12px;
         height: 460px;
@@ -108,13 +188,31 @@ div.introContainer>.btn-home>button.infoBut {
         font-size: 40px;
     }
 
+    div.introContainerEn>h1 {
+        padding-left: 50px;
+        padding-bottom: 10px;
+        font-size: 40px;
+    }
+
     div.introContainer>hr {
         margin-right: 50px;
         margin-top: -15px;
     }
 
+    div.introContainerEn>hr {
+        margin-left: 50px;
+        margin-top: -15px;
+    }
+
     div.introContainer>p {
         margin-right: 50px;
+        margin-top: 20px;
+        font-size: 18px;
+        width: 410px;
+    }
+
+    div.introContainerEn>p {
+        margin-left: 50px;
         margin-top: 20px;
         font-size: 18px;
         width: 410px;
@@ -134,14 +232,34 @@ div.introContainer>.btn-home>button.infoBut {
         height: 385px;
     }
 
+    div.introContainerEn {
+        background-size: 313px 372px;
+        background-position: 0 15px;
+        height: 385px;
+    }
+
     div.introContainer>h1 {
         padding-right: 48px;
         font-size: 35px;
         width: 180px;
     }
 
+    div.introContainerEn>h1 {
+        padding-left: 48px;
+        font-size: 35px;
+        width: 180px;
+    }
+
     div.introContainer>p {
         margin-right: 48px;
+        margin-top: 25px;
+        font-size: 13.33px;
+        width: 304px;
+        text-align: center;
+    }
+
+    div.introContainerEn>p {
+        margin-left: 48px;
         margin-top: 25px;
         font-size: 13.33px;
         width: 304px;
@@ -161,8 +279,19 @@ div.introContainer>.btn-home>button.infoBut {
         background-position: 0 12px;
     }
 
+    div.introContainerEn {
+        background-size: 380px 452px;
+        background-position: 374px 12px;
+    }
+
     div.introContainer>h1 {
         padding-right: 50px;
+        padding-bottom: 10px;
+        font-size: 40px;
+    }
+
+    div.introContainerEn>h1 {
+        padding-left: 50px;
         padding-bottom: 10px;
         font-size: 40px;
     }
@@ -172,8 +301,20 @@ div.introContainer>.btn-home>button.infoBut {
         margin-top: -15px;
     }
 
+    div.introContainerEn>hr {
+        margin-left: 50px;
+        margin-top: -15px;
+    }
+
     div.introContainer>p {
         margin-right: 50px;
+        margin-top: 20px;
+        font-size: 18px;
+        width: 410px;
+    }
+
+    div.introContainerEn>p {
+        margin-left: 50px;
         margin-top: 20px;
         font-size: 18px;
         width: 410px;
@@ -192,14 +333,33 @@ div.introContainer>.btn-home>button.infoBut {
         background-position: 0 15px;
     }
 
+    div.introContainerEn {
+        background-size: 313px 372px;
+        background-position: 97px 15px
+    }
+
     div.introContainer>h1 {
         padding-right: 48px;
         font-size: 35px;
         width: 180px;
     }
 
+    div.introContainerEn>h1 {
+        padding-left: 48px;
+        font-size: 35px;
+        width: 180px;
+    }
+
     div.introContainer>p {
         margin-right: 48px;
+        margin-top: 25px;
+        font-size: 13.33px;
+        width: 304px;
+        text-align: center;
+    }
+
+    div.introContainerEn>p {
+        margin-left: 48px;
         margin-top: 25px;
         font-size: 13.33px;
         width: 304px;
