--- a/src/components/Scrool/Scrool.css
+++ b/src/components/Scrool/Scrool.css
@@ -6,6 +6,15 @@
     top:-65px;
     cursor:pointer;
   }
+
+  .containerEn {
+    position: relative;
+    width: 24px;
+    height: 24px;
+    left:35px;
+    top:-65px;
+    cursor:pointer;
+  }
   
   .chevron {
     position: absolute;
