--- a/src/components/HomeCategory/HomeCategory.css
+++ b/src/components/HomeCategory/HomeCategory.css
@@ -7,6 +7,12 @@
     margin-bottom: -45px;
 }
 
+.h22En {
+    width: 225px;
+    margin-top: 160px;
+    margin-bottom: -45px;
+}
+
 .categoryCantainer {
     /* height:585px; */
     display: grid;
