--- a/src/components/HomeTeacher/HomeTeacher.css
+++ b/src/components/HomeTeacher/HomeTeacher.css
@@ -6,6 +6,12 @@
     margin-bottom: 10px;
 }
 
+.h25En {
+    width: 245px;
+    margin-top: 175px;
+    margin-bottom: 10px;
+}
+
 .teacherCantainer {
     /* height:402px; */
     justify-content: center;
