--- a/src/components/HomeCources/HomeCources.css
+++ b/src/components/HomeCources/HomeCources.css
@@ -7,6 +7,12 @@
     margin-bottom: 5px;
 }
 
+.h23En {
+    width: 136px;
+    margin-top: 180px;
+    margin-bottom: 5px;
+}
+
 .courcesCantainer {
     /* height:402px; */
     justify-content: center;
