--- a/src/components/HomeIntro/HomeIntro.css
+++ b/src/components/HomeIntro/HomeIntro.css
@@ -7,6 +7,14 @@ div.introContainer {
     background-repeat: no-repeat;
 }
 
+.darkIntro {
+    color: #0a89ff;
+}
+
+.lightIntro {
+    color: #043D72;
+}
+
 div.introContainerEn {
     direction: ltr;
     width: 100%;
@@ -23,7 +31,7 @@ div.introContainerEn>h1 {
     padding-left: 100px;
     font-size: 50px;
     font-weight: normal;
-    color: #043D72;
+
 }
 
 div.introContainer>h1 {
@@ -31,7 +39,6 @@ div.introContainer>h1 {
     padding-right: 100px;
     font-size: 50px;
     font-weight: normal;
-    color: #043D72;
 }
 
 div.introContainer>hr {
@@ -154,7 +161,7 @@ div.introContainer>.btn-home>button.infoBut {
         margin-top: 30px;
     }
 
-    div.introContainerEn>.btn-home .MuiButtonBase-root{
+    div.introContainerEn>.btn-home .MuiButtonBase-root {
         font-size: 10px;
     }
 
