--- a/src/components/UploadPhoto/index.scss
+++ b/src/components/UploadPhoto/index.scss
@@ -23,3 +23,26 @@
 .avaratPic {
     border: 1.5px solid #00aa1c;
 }
+
+.lkjDVC{
+    position: absolute !important;
+    top: 52px;
+    border: none !important;
+    min-width: 80px !important;
+    min-height: 80px !important;
+    height: 135px !important;
+    width: 135px !important;
+    border-radius: 50% !important;
+}
+
+.lkjDVC > svg{
+    display: none;
+}
+
+.dmajdp span{
+    display: none;
+}
+
+.iThIFr span{
+display: none;
+}
