--- a/src/components/TeacherCard/TeacherCard.css
+++ b/src/components/TeacherCard/TeacherCard.css
@@ -1,95 +1,95 @@
-
-div.teacherCardCard{
-    box-shadow:0px 3px 8px 1px rgba(0,0,0,.08); 
-    border-radius:10px;
+div.teacherCardCard {
+    box-shadow: 0px 3px 8px 1px rgba(0, 0, 0, .08);
+    border-radius: 10px;
 }
 
-.MuiPaper-root > .MuiCardContent-root > .TeacherCardName{
+.MuiPaper-root>.MuiCardContent-root>.TeacherCardName {
     font-family: bakh;
     font-size: 16px;
-    color:#585858;
+    color: #585858;
     margin-top: -3px;
 }
 
 
-.MuiPaper-root > .MuiCardContent-root > .TeacherCardDescription{
+.MuiPaper-root>.MuiCardContent-root>.TeacherCardDescription {
     font-family: bakh;
     font-size: 12px;
-    color:#838383;
+    color: #838383;
     margin-top: 20px;
 }
 
-.MuiPaper-root > .MuiCardContent-root > hr{
-    width:85px;
+.MuiPaper-root>.MuiCardContent-root>hr {
+    width: 85px;
     margin-top: 15px;
     border: .75px solid #0485C8;
     background-color: #0485C8;
 }
 
-.MuiPaper-root > .TeacherCardSocialHolder{
+.MuiPaper-root>.TeacherCardSocialHolder {
     width: 75px;
-    margin:auto;
+    margin: auto;
 }
 
-.MuiPaper-root > div > span:nth-child(1){
+.MuiPaper-root>div>span:nth-child(1) {
     display: inline-block;
-    width:20px;
-    height:20px;
+    width: 20px;
+    height: 20px;
     background: url('./../../assets/images/Teacher/youtube.png');
-    background-size:20px;
+    background-size: 20px;
 }
-.MuiPaper-root > div > span:nth-child(2){
+
+.MuiPaper-root>div>span:nth-child(2) {
     display: inline-block;
-    width:20px;
-    height:20px;
+    width: 20px;
+    height: 20px;
     background: url('./../../assets/images/Teacher/twitter.png');
-    background-size:20px;
+    background-size: 20px;
     margin-right: 7px;
 }
-.MuiPaper-root > div > span:nth-child(3){
+
+.MuiPaper-root>div>span:nth-child(3) {
     display: inline-block;
-    width:20px;
-    height:20px;
+    width: 20px;
+    height: 20px;
     background: url('./../../assets/images/Teacher/whatsapp.png');
-    background-size:20px;
+    background-size: 20px;
     margin-right: 7px;
 }
 
 
 /* Tab Responsive */
 
-@media screen and (max-width:749px){
+@media screen and (max-width:749px) {
 
-    .teacherResponsiveClass{
+    .teacherResponsiveClass {
         display: none;
     }
 
 }
 
-@media screen and (max-width:749px){
+@media screen and (max-width:749px) {
 
-    div.teacherCardCard > .teacherCardMedia{
-        height:138px;
+    div.teacherCardCard>.teacherCardMedia {
+        height: 138px;
     }
-    
-    .MuiPaper-root > .MuiCardContent-root > .TeacherCardName{
+
+    .MuiPaper-root>.MuiCardContent-root>.TeacherCardName {
         font-size: 12px;
     }
-    
-    
-    .MuiPaper-root > .MuiCardContent-root > .TeacherCardDescription{
+
+
+    .MuiPaper-root>.MuiCardContent-root>.TeacherCardDescription {
         font-size: 8.75px;
         margin-top: 10px;
     }
-    
-    .MuiPaper-root > .MuiCardContent-root > hr{
+
+    .MuiPaper-root>.MuiCardContent-root>hr {
         margin-top: 10px;
     }
-    
-    .MuiPaper-root > .TeacherCardSocialHolder{
+
+    .MuiPaper-root>.TeacherCardSocialHolder {
         margin-bottom: -3px;
     }
-    
+
 
 }
-
