--- a/src/components/common/SelectBox/SelectBox.css
+++ b/src/components/common/SelectBox/SelectBox.css
@@ -4,7 +4,8 @@
 }
 
 .selectbox > .MuiFormControl-root{
-    margin-top: 5px;
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 
 .selectbox > .MuiFormControl-root > .MuiInputBase-root > .MuiSelect-select{
