--- a/src/components/MainbarEditInfo/MainbarEditInfo.css
+++ b/src/components/MainbarEditInfo/MainbarEditInfo.css
@@ -7,7 +7,7 @@
 
 .MainbarEditInfo {
   width: 998px;
-  height: 540px;
+  height: 555px;
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.08);
   border-radius: 20px;
   background-color: white;
@@ -33,13 +33,19 @@
 }
 
 .MainbarEditInfo>.MainbarEditInfoProfile {
-  width: 150px;
-  height: 150px;
-  border: 3px solid #00aa1c;
-  border-radius: 50%;
-  background: url("./../../assets/images/StudentPanel/profile.jpg");
-  background-size: 100%;
-  margin: -10px auto 0 auto;
+
+  margin: auto;
+}
+
+.MainbarEditInfo>.MainbarEditInfoProfile>.MuiAvatar-root {
+  margin: auto;
+}
+
+.MainbarEditInfoProfile>.addPicCLick {
+  /* top: -37px !important;
+  right: 77px !important; */
+  top: -43px !important;
+  right: 407px !important;
 }
 
 .MainbarEditInfo>.MainbarEditInfoProfile>.MainbarEditInfoProfileIcon {
@@ -64,7 +70,7 @@
   grid-template-rows: 45px 45px;
   gap: 50px;
   margin-right: 60px;
-  margin-top: 36px;
+  /* margin-top: 36px; */
 }
 
 .MainbarEditInfo>.MainbarEditInfoInputs>div:nth-child(4) {
@@ -93,6 +99,11 @@
 
 @media screen and (max-width: 1262px) {
 
+  .MainbarEditInfoProfile>.addPicCLick {
+    top: -41px !important;
+    right: 197px !important;
+  }
+
   .MainbarEditInfoInputs>div:nth-child(4)>.datePicker_form>.rmdp-container {
     width: 98% !important;
   }
@@ -103,13 +114,14 @@
 
   .MainbarContainer {
     width: 610px;
-    height: 609px;
+    height: 660px;
     border-radius: 0 20px 20px 0;
     background-color: #fafafa;
   }
 
   .MainbarEditInfo {
     width: 550px;
+    height: 600px;
     margin-right: 30px;
     margin-top: 35px;
   }
@@ -129,12 +141,6 @@
 
   /**/
 
-  .MainbarEditInfo>.MainbarEditInfoProfile {
-    width: 100px;
-    height: 100px;
-    border: 2px solid #00aa1c;
-    margin: 10px auto 0 auto;
-  }
 
   .MainbarEditInfo>.MainbarEditInfoProfile>.MainbarEditInfoProfileIcon {
     width: 34px;
@@ -152,7 +158,7 @@
     grid-template-rows: 40px 40px 40px;
     gap: 50px;
     margin-right: 60px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
   }
 
   .MainbarEditInfo>.MainbarEditInfoInputs>div:nth-child(4) {
@@ -173,13 +179,19 @@
 
 @media screen and (max-width: 749px) {
 
+
+  .MainbarEditInfoProfile>.addPicCLick {
+    top: -37px !important;
+    right: 77px !important;
+  }
+
   .MainbarContainerEditInfo {
-    height: 825px;
+    height: 880px;
   }
 
   .MainbarEditInfo {
     width: 300px;
-    height: 660px;
+    height: 725px;
     margin-right: 30px;
     margin-top: 135px;
   }
@@ -194,7 +206,7 @@
     grid-template-rows: 25px 25px 25px 25px 25px 25px;
     gap: 50px;
     margin-right: 55px;
-    margin-top: 35px;
+    /* margin-top: 35px; */
   }
 
   .MainbarEditInfo>.MainbarEditInfoTopic>p {
