--- a/src/components/common/avatar/index.scss
+++ b/src/components/common/avatar/index.scss
@@ -1,5 +1,10 @@
 $lg-avatar: 8rem;
+$xs-avatar: 2.6rem;
 $sm-avatar: 3rem;
+$md-avatar: 5rem;
+$xl-avatar: 10rem;
+
+
 
 .lg-avatar {
     width: $lg-avatar !important;
@@ -9,6 +14,21 @@ $sm-avatar: 3rem;
 .sm-avatar {
     width: $sm-avatar !important;
     height: $sm-avatar !important;
+}
+
+.md-avatar {
+    width: $md-avatar !important;
+    height: $md-avatar !important;
+}
+
+.xl-avatar {
+    width: $xl-avatar !important;
+    height: $xl-avatar !important;
+}
+
+.xs-avatar {
+    width: $xs-avatar !important;
+    height: $xs-avatar !important;
 }
 
 
@@ -25,6 +45,63 @@ $sm-avatar: 3rem;
 
 
     position: relative;
-    top: 49px;
-    right: -6px;
+    top: 23px;
+    right: 18px;
+}
+
+.sidebarContainerInfoPictureIconLG {
+    width: 30px;
+    height: 30px;
+    background: url("./../../../assets/images/StudentPanel/pic.png");
+    background-size: 15px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+    background-color: #00707F;
+    cursor: pointer;
+
+
+    position: relative;
+    top: 23px;
+    right: 18px;
+}
+
+.sidebarContainerInfoPictureIconXL {
+    width: 50px;
+    height: 50px;
+    background: url("./../../../assets/images/StudentPanel/pic.png");
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+    background-color: #00707F;
+    cursor: pointer;
+
+
+    position: relative;
+    top: 23px;
+    right: 18px;
+}
+
+@media screen and (max-width:1262px) {
+
+
+    .md-avatar {
+        width: 4rem !important;
+        height: 4rem !important;
+    }
+
+    .sidebarContainerInfoPictureIcon {
+        width: 20px;
+        height: 20px;
+        background-size: 11px;
+        border-radius: 50%;
+        right: 15px;
+    }
+
+    .xs-avatar {
+        width: 2rem !important;
+        height: 2rem !important;
+    }
+
 }
